--- a/Login/AndroidManifest.xml
+++ b/Login/AndroidManifest.xml
@@ -19,6 +19,10 @@
         <activity android:name=".MainActivity">
 
         </activity>
+        <activity android:name=".forgotPassword">
+
+        </activity>
+
     </application>
 
 </manifest>
