--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -23,8 +24,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".Register">
-        </activity>
+        <activity android:name=".Register" />
         <activity android:name=".Login" />
         <activity android:name=".MainPage">
             <intent-filter>
@@ -58,7 +58,9 @@
         <activity android:name=".MyPublishedElections" />
         <activity android:name=".ViewMyPublishedElections" />
         <activity android:name=".forgotPassword" />
-        <activity android:name=".viewprofile"></activity>
+        <activity android:name=".viewprofile" />
+        <activity android:name=".EditElection" />
+        <activity android:name=".EditDeleted"></activity>
     </application>
 
 </manifest>
